Header casi hecho

--- a/FilmCity/estilos/variables/_variables.scss
+++ b/FilmCity/estilos/variables/_variables.scss
@@ -6,7 +6,7 @@
 
 $color_titulo: #E50914;
 $color_principal: #ffffff;
-$color_secundario: #4b4444;
+$color_secundario: #4b44444c;
 $color_detalles:#242432;
 
 
