--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -1,3 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poller+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poller+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");/*# sourceMappingURL=estilos.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poller+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: black;
+  font-family: "Poppins", serif;
+}
+
+header {
+  background-color: rgba(75, 68, 68, 0.2980392157);
+  width: 90%;
+  margin: auto;
+  padding: 7px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+}
+header .perfil {
+  margin-top: 5px;
+  margin-right: 20px;
+}
+header .perfil .user {
+  width: 60px;
+  height: 60px;
+  border-radius: 40px;
+}
+header .perfil .menu {
+  width: 40px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+}
+header .secciones {
+  display: flex;
+  gap: 70px;
+  font-size: 20px;
+  color: #ffffff;
+  margin-top: 20px;
+}
+header .titulo {
+  font-family: "Poller One", serif;
+  font-size: 30px;
+  color: #E50914;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+header .titulo h3 {
+  text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
+}/*# sourceMappingURL=estilos.css.map */
