--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poller+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poller+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-<<<<<<< Updated upstream
 * {
   padding: 0;
   margin: 0;
@@ -53,7 +52,8 @@ header .titulo {
 }
 header .titulo h3 {
   text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
-=======
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
@@ -70,12 +70,16 @@ img {
 }
 
 .peliculas_menu_caja {
-  background-color: #4b4444;
-  border-radius: 10px;
-  width: 20%;
+  background-color: red;
+  border-radius: 20px;
+  width: 25%;
   padding: 0.5%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
+}
+
+.peliculas_titulo {
+  display: none;
 }
 
 .select_genero {
@@ -83,11 +87,7 @@ img {
   color: white;
   font-family: "Poppins", serif;
   border-radius: 5px;
-}
-
-.peliculas_titulo {
-  font-family: "Poppins", serif;
-  color: white;
+  padding: 5%;
 }
 
 .options {
@@ -97,5 +97,35 @@ img {
 .options_select {
   color: white;
   font-weight: bold;
->>>>>>> Stashed changes
+}
+
+@media (min-width: 576px) {
+  .peliculas_menu_caja {
+    margin: auto;
+    width: 70%;
+  }
+  .peliculas_select {
+    width: 100%;
+    text-align: center;
+  }
+}
+@media (min-width: 768px) {
+  .peliculas_titulo {
+    display: block;
+    font-family: "Poppins", serif;
+    color: white;
+    align-content: center;
+    text-align: center;
+  }
+  .peliculas_select {
+    text-align: center;
+  }
+  .select_genero {
+    padding: 2%;
+  }
+}
+@media (min-width: 992px) {
+  .peliculas_menu_caja {
+    width: 50%;
+  }
 }/*# sourceMappingURL=estilos.css.map */
