--- a/FilmCity/estilos/parciales/_peliculas.scss
+++ b/FilmCity/estilos/parciales/_peliculas.scss
@@ -16,69 +16,70 @@ img{
 //MENU CAJA
 
 .peliculas_menu_caja{
-    background-color: red;
-    border-radius: 20px;
-    width: 25%;
-    padding: 0.5%;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
+    background-color: $color_secundario;
+    border-radius: 20px;
+    padding: 1%;
 }
 
 .peliculas_titulo{
+    color: white;
     display: none;
-}
-
-.select_genero{
-    background-color: $color_detalles;
-    color: white;
     font-family: $fuente_principal;
-    border-radius: 5px;
-    padding: 5%;
+    align-content: center;
 }
 
-.options{
+.peliculas_select{
+    margin: auto;
+    text-align: center;
+    width: 60%;
     font-family: $fuente_principal;
-}
+    
+    .select_genero{
+        width: 100%;
+        background-color: $color_detalles;
+        border: none;
+        color: white;
+        padding: 2%;
+        text-align: center;
 
-.options_select{
-    color: white;
-    font-weight: bold;
+        .options_select{
+            font-weight: bold;
+        }
+
+    }
+
 }
 
 //PELICULAS
 
 //RESPONSIVE
-
 @media (min-width: 576px) { 
 
-    .peliculas_menu_caja{
-        margin: auto;
-        width: 70%;
-    }
-
-    .peliculas_select{
-        width: 100%;
-        text-align: center;
-    }
+    
 
  }
 
 @media (min-width: 768px) { 
     
+    .peliculas_menu_caja{
+        grid-template-columns: 1fr 3fr;
+        width: 80%;
+        margin: auto;
+    }
+
     .peliculas_titulo{
         display: block;
-        font-family: $fuente_principal;
-        color: white;
-        align-content: center;
-        text-align: center;
+        text-align: end;
     }
 
     .peliculas_select{
-        text-align: center;
-    }
-
-    .select_genero{
-        padding: 2%;
+        
+        .select_genero{
+            width: 120%;
+        }
+    
     }
         
 }
@@ -87,12 +88,32 @@ img{
     
     .peliculas_menu_caja{
         width: 50%;
+        margin: 0;
+    }
+
+    .peliculas_select{
+        
+        .select_genero{
+            width: 120%;
+        }
+    
     }
     
 }
 
 @media (min-width: 1200px) { 
     
+    .peliculas_menu_caja{
+        width: 40%;
+    }
+
+    .peliculas_select{
+        
+        .select_genero{
+            width: 130%;
+        }
+    
+    }
 
  }
 
