--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -69,6 +69,14 @@ img {
   margin: auto;
 }
 
+p {
+  color: white;
+}
+
+.bottom {
+  margin-bottom: 10%;
+}
+
 .peliculas_menu_caja {
   display: grid;
   grid-template-columns: 1fr;
@@ -102,6 +110,13 @@ img {
   font-weight: bold;
 }
 
+.peliculas_catalogo {
+  margin-top: 10%;
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+}
+
 @media (min-width: 768px) {
   .peliculas_menu_caja {
     grid-template-columns: 1fr 3fr;
@@ -115,6 +130,10 @@ img {
   .peliculas_select .select_genero {
     width: 120%;
   }
+  .peliculas_catalogo {
+    margin-top: 5%;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 @media (min-width: 992px) {
   .peliculas_menu_caja {
@@ -124,6 +143,11 @@ img {
   .peliculas_select .select_genero {
     width: 120%;
   }
+  .peliculas_catalogo {
+    margin-top: 5%;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 2%;
+  }
 }
 @media (min-width: 1200px) {
   .peliculas_menu_caja {
@@ -131,5 +155,9 @@ img {
   }
   .peliculas_select .select_genero {
     width: 130%;
+  }
+  .peliculas_catalogo {
+    margin-top: 5%;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 }/*# sourceMappingURL=estilos.css.map */
