--- a/FilmCity/estilos/parciales/_peliculas.scss
+++ b/FilmCity/estilos/parciales/_peliculas.scss
@@ -8,7 +8,7 @@ img{
     max-width: 100%;
 }
 
-.peliculas{
+.peliculas, .series{
     max-width: 90%;
     margin: auto;
 }
@@ -22,7 +22,7 @@ p{
 }
 
 //MENU CAJA
-.peliculas_menu_caja{
+.peliculas_menu_caja, .series_menu_caja{
     display: grid;
     grid-template-columns: 1fr;
     background-color: $color_secundario;
@@ -30,14 +30,14 @@ p{
     padding: 1%;
 }
 
-.peliculas_titulo{
+.peliculas_titulo, .series_titulo{
     color: white;
     display: none;
     font-family: $fuente_principal;
     align-content: center;
 }
 
-.peliculas_select{
+.peliculas_select, .series_select{
     margin: auto;
     text-align: center;
     width: 60%;
@@ -60,7 +60,7 @@ p{
 }
 
 //PELICULAS
-.peliculas_catalogo{
+.peliculas_catalogo, .series_catalogo{
     margin-top: 10%;
     display: grid;
     grid-template-columns: 1fr;
@@ -77,18 +77,18 @@ p{
 
 @media (min-width: 768px) { 
     
-    .peliculas_menu_caja{
+    .peliculas_menu_caja, .series_menu_caja{
         grid-template-columns: 1fr 3fr;
         width: 80%;
         margin: auto;
     }
 
-    .peliculas_titulo{
+    .peliculas_titulo, .series_titulo{
         display: block;
         text-align: end;
     }
 
-    .peliculas_select{
+    .peliculas_select, .series_select{
         
         .select_genero{
             width: 120%;
@@ -96,7 +96,7 @@ p{
     
     }
 
-    .peliculas_catalogo{
+    .peliculas_catalogo, .series_catalogo{
         margin-top: 5%;
         grid-template-columns: 1fr 1fr;
     }
@@ -105,12 +105,12 @@ p{
 
 @media (min-width: 992px) { 
     
-    .peliculas_menu_caja{
+    .peliculas_menu_caja, .series_menu_caja{
         width: 50%;
         margin: 0;
     }
 
-    .peliculas_select{
+    .peliculas_select, .series_select{
         
         .select_genero{
             width: 120%;
@@ -118,7 +118,7 @@ p{
     
     }
 
-    .peliculas_catalogo{
+    .peliculas_catalogo, .series_catalogo{
         margin-top: 5%;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         gap: 2%;
@@ -128,11 +128,11 @@ p{
 
 @media (min-width: 1200px) { 
     
-    .peliculas_menu_caja{
+    .peliculas_menu_caja, .series_menu_caja{
         width: 40%;
     }
 
-    .peliculas_select{
+    .peliculas_select, .series_select{
         
         .select_genero{
             width: 130%;
@@ -140,7 +140,7 @@ p{
     
     }
 
-    .peliculas_catalogo{
+    .peliculas_catalogo, .series_catalogo{
         margin-top: 5%;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
