--- a/FilmCity/estilos/parciales/_peliculas.scss
+++ b/FilmCity/estilos/parciales/_peliculas.scss
@@ -17,9 +17,6 @@ p{
     color: white;
 }
 
-.bottom{
-    margin-bottom: 10%;
-}
 
 //MENU CAJA
 .peliculas_menu_caja, .series_menu_caja{
@@ -50,13 +47,13 @@ p{
         color: white;
         padding: 2%;
         text-align: center;
-
+        
         .options_select{
             font-weight: bold;
         }
-
+        
     }
-
+    
 }
 
 //PELICULAS
@@ -65,6 +62,20 @@ p{
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
+}
+
+.bottom{
+    margin-bottom: 10%;
+    position: relative;
+}
+
+//CAJA DETALLES
+.detalles{
+    background-color: red;
+    width: 80%;
+    position: absolute;
+    top: 0;
+    left: 10%;
 }
 
 
