--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -111,19 +111,44 @@ p {
   display: grid;
   grid-template-columns: 1fr;
   text-align: center;
+  position: absolute;
+  width: 90%;
+  margin: auto;
 }
 
 .bottom {
-  margin-bottom: 10%;
+  margin-bottom: 15%;
   position: relative;
 }
 
 .detalles {
-  background-color: red;
-  width: 80%;
+  background-color: #242432;
+  width: 85%;
   position: absolute;
   top: 0;
-  left: 10%;
+  left: 7.6%;
+}
+
+.valoracion_tiempo {
+  background-color: green;
+  display: grid;
+  grid-template-columns: 1fr 6fr;
+  padding: 1%;
+  padding-left: 10%;
+}
+
+.genero {
+  padding: 1%;
+  padding-left: 5%;
+}
+
+.align-right {
+  text-align: end;
+}
+
+.align-left {
+  text-align: start;
+  margin-left: 5%;
 }
 
 @media (min-width: 768px) {
@@ -143,6 +168,20 @@ p {
     margin-top: 5%;
     grid-template-columns: 1fr 1fr;
   }
+  .bottom {
+    margin-bottom: 20%;
+  }
+  .detalles {
+    width: 95%;
+    left: 2.5%;
+  }
+  .valoracion_tiempo {
+    background-color: green;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    padding: 1%;
+    padding-left: 3%;
+  }
 }
 @media (min-width: 992px) {
   .peliculas_menu_caja, .series_menu_caja {
@@ -156,6 +195,9 @@ p {
     margin-top: 5%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 2%;
+  }
+  .bottom {
+    margin-bottom: 25%;
   }
 }
 @media (min-width: 1200px) {
