--- a/FilmCity/estilos/parciales/_peliculas.scss
+++ b/FilmCity/estilos/parciales/_peliculas.scss
@@ -62,22 +62,46 @@ p{
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
+    position: absolute;
+    width: 90%;
+    margin: auto;
 }
 
 .bottom{
-    margin-bottom: 10%;
+    margin-bottom: 15%;
     position: relative;
 }
 
 //CAJA DETALLES
 .detalles{
-    background-color: red;
-    width: 80%;
+    background-color: $color_detalles;
+    width: 85%;
     position: absolute;
     top: 0;
-    left: 10%;
+    left: 7.6%;
 }
 
+.valoracion_tiempo{
+    background-color: green;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    padding: 1%;
+    padding-left: 10%;
+}
+
+.genero{
+    padding: 1%;
+    padding-left: 5%;
+}
+
+.align-right{
+    text-align: end;
+}
+
+.align-left{
+    text-align: start;
+    margin-left: 5%;
+}
 
 //RESPONSIVE
 @media (min-width: 576px) { 
@@ -112,6 +136,23 @@ p{
         grid-template-columns: 1fr 1fr;
     }
         
+    .bottom{
+        margin-bottom: 20%;
+    }
+
+    .detalles{
+        width: 95%;
+        left: 2.5%;
+    }
+
+    .valoracion_tiempo{
+        background-color: green;
+        display: grid;
+        grid-template-columns: 1fr 6fr;
+        padding: 1%;
+        padding-left: 3%;
+    }
+
 }
 
 @media (min-width: 992px) { 
@@ -133,6 +174,10 @@ p{
         margin-top: 5%;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         gap: 2%;
+    }
+
+    .bottom{
+        margin-bottom: 25%;
     }
     
 }
