--- a/FilmCity/estilos/parciales/_header.scss
+++ b/FilmCity/estilos/parciales/_header.scss
@@ -1,59 +1,188 @@
-*{
+/* Estilos base - Móviles (Mobile First) */
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    background-color: black;
-    font-family:$fuente_principal;
+
+img {
+    max-width: 100%;
 }
-header{
+
+body {
+    background-color: black;
+    font-family: $fuente_principal;
+}
+
+header {
     background-color: $color_secundario;
-    width: 90%;
+    width: 100%;
     margin: auto;
     padding: 7px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-bottom-right-radius: 50px;
     border-bottom-left-radius: 50px;
-    .perfil{
-        margin-top: 5px;
-      margin-right: 20px;
-            .user{
-                width: 60px;
-                height: 60px;
-                border-radius: 40px;
-            }
-            .menu{
-                width: 40px;
-                margin-right: 20px;
-                margin-bottom: 0px;
-            }
+    
+    .desplegable {
+        display: block;
+        font-size: 45px;
+        color: white;
+        margin-left: -100px;
+        margin-top:13px;
     }
 
-    .secciones{
-        
+    .perfil {
         display: flex;
-        gap: 70px;
-        font-size: 20px;
-        color: $color_principal;
-        margin-top: 20px;
+        align-items: center;
+        gap: 15px;
+        margin-right: 13px;
+        margin-top: 5px;
+        
+        .user {
+            width: 50px;
+            height: 50px;
+            border-radius: 40px;
+        }
+
+        .menu {
+            width: 30px;
+        }
+
+        .lupa {
+            font-size: 30px;
+            color: white;
+        }
     }
 
-    .titulo{
+    .secciones {
+        display: none;
+    }
+
+    .titulo {
         font-family: $fuente_titulo;
         font-size: 30px;
-        color: $color_titulo;// -webkit-text-stroke: 2px rgb(192, 192, 192);
-        
+        color: $color_titulo;
         margin-top: 10px;
         margin-left: 20px;
-            h3{
-                text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
-      
-            }
+        
+        h3 {
+            text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
+        }
     }
+}
+
+/* Tablets (>= 576px) */
+@media (min-width: 576px) {
+    header {
+        .perfil {
+            gap: 20px;
+            
+            .menu {
+                width: 35px;
+            }
+
+            .lupa {
+                font-size: 35px;
+            }
+        }
+    }
+}
+
+/* Tablets y pantallas medianas (>= 768px) */
+@media (min-width: 768px) {
+    header {
+        .desplegable{
+            margin-left: -230px;
+        }
+
+        .titulo {
+            font-size: 35px;
+        }
+
+        .perfil {
+            .user {
+                width: 60px;
+                height: 60px;
+            }
+            .menu {
+                width: 35px;
+            }
+            .lupa {
+                font-size: 35px;
+            }
+        }
 
 
+    }
+}
 
+/* Escritorios pequeños (>= 992px) */
+@media (min-width: 992px) {
+    header {
+        .secciones {
+            display: flex;
+            gap: 20px;
+            font-size: 20px;
+            color: $color_principal;
+            margin-top: 20px;
+        }
 
+        .desplegable{
+            display: none;
+        }
+        .perfil {
+            gap: 25px;
+            
+            .user {
+                width: 50px;
+                height: 50px;
+            }
+            .menu{
+                width: 33px;
+            }
+            .lupa{
+                font-size: 33px;
+            }
+        }
+    }
+}
+
+/* Escritorios grandes (>= 1200px) */
+@media (min-width: 1200px) {
+    header {
+        .perfil {
+            gap: 25px;
+            
+            .user {
+                width: 50px;
+                height: 50px;
+            }
+        }
+
+        .secciones {
+            gap: 40px;
+        }
+    }
+}
+
+/* Pantallas extra grandes (>= 1400px) */
+@media (min-width: 1400px) {
+    header {
+
+        .perfil {
+            margin-right: 30px;
+            gap: 25px;
+            
+            .user {
+                width: 50px;
+                height: 50px;
+            }
+        }
+
+        .secciones {
+            gap: 70px;
+        }
+    }
 }
