--- a/FilmCity/estilos/estilos.scss
+++ b/FilmCity/estilos/estilos.scss
@@ -1,4 +1,5 @@
 @import "./variables/variables";
 @import "./parciales/header";
+@import "./parciales/home";
 @import "./parciales/peliculas";
 @import "./parciales/series";
