--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -18,6 +18,10 @@ body {
   font-family: "Poppins", serif;
 }
 
+.hola {
+  display: block;
+}
+
 header {
   background-color: rgba(75, 68, 68, 0.2980392157);
   width: 100%;
@@ -61,7 +65,7 @@ header .secciones {
 header .titulo {
   font-family: "Poller One", serif;
   font-size: 30px;
-  color: #e50914;
+  color: #E50914;
   margin-top: 10px;
   margin-left: 20px;
 }
@@ -69,6 +73,90 @@ header .titulo h3 {
   text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
 }
 
+/* Tablets (>= 576px) */
+@media (min-width: 576px) {
+  header .perfil {
+    gap: 20px;
+  }
+  header .perfil .menu {
+    width: 35px;
+  }
+  header .perfil .lupa {
+    font-size: 35px;
+  }
+}
+/* Tablets y pantallas medianas (>= 768px) */
+@media (min-width: 768px) {
+  header .desplegable {
+    margin-left: -230px;
+  }
+  header .titulo {
+    font-size: 35px;
+  }
+  header .perfil .user {
+    width: 60px;
+    height: 60px;
+  }
+  header .perfil .menu {
+    width: 35px;
+  }
+  header .perfil .lupa {
+    font-size: 35px;
+  }
+}
+/* Escritorios pequeños (>= 992px) */
+@media (min-width: 992px) {
+  header .secciones {
+    display: flex;
+    gap: 20px;
+    font-size: 20px;
+    color: #ffffff;
+    margin-top: 20px;
+  }
+  header .desplegable {
+    display: none;
+  }
+  header .perfil {
+    gap: 25px;
+  }
+  header .perfil .user {
+    width: 50px;
+    height: 50px;
+  }
+  header .perfil .menu {
+    width: 33px;
+  }
+  header .perfil .lupa {
+    font-size: 33px;
+  }
+}
+/* Escritorios grandes (>= 1200px) */
+@media (min-width: 1200px) {
+  header .perfil {
+    gap: 25px;
+  }
+  header .perfil .user {
+    width: 50px;
+    height: 50px;
+  }
+  header .secciones {
+    gap: 40px;
+  }
+}
+/* Pantallas extra grandes (>= 1400px) */
+@media (min-width: 1400px) {
+  header .perfil {
+    margin-right: 30px;
+    gap: 25px;
+  }
+  header .perfil .user {
+    width: 50px;
+    height: 50px;
+  }
+  header .secciones {
+    gap: 70px;
+  }
+}
 .carousel-item {
   position: relative;
 }
@@ -281,10 +369,7 @@ header .titulo h3 {
     padding: 14px;
   }
 }
-
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -294,8 +379,7 @@ img {
   max-width: 100%;
 }
 
-.peliculas,
-.series {
+.peliculas, .series {
   max-width: 90%;
   margin: auto;
 }
@@ -304,8 +388,7 @@ p {
   color: white;
 }
 
-.peliculas_menu_caja,
-.series_menu_caja {
+.peliculas_menu_caja, .series_menu_caja {
   display: grid;
   grid-template-columns: 1fr;
   background-color: rgba(75, 68, 68, 0.2980392157);
@@ -313,23 +396,20 @@ p {
   padding: 1%;
 }
 
-.peliculas_titulo,
-.series_titulo {
+.peliculas_titulo, .series_titulo {
   color: white;
   display: none;
   font-family: "Poppins", serif;
   align-content: center;
 }
 
-.peliculas_select,
-.series_select {
+.peliculas_select, .series_select {
   margin: auto;
   text-align: center;
   width: 60%;
   font-family: "Poppins", serif;
 }
-.peliculas_select .select_genero,
-.series_select .select_genero {
+.peliculas_select .select_genero, .series_select .select_genero {
   width: 100%;
   background-color: #242432;
   border: none;
@@ -337,13 +417,11 @@ p {
   padding: 2%;
   text-align: center;
 }
-.peliculas_select .select_genero .options_select,
-.series_select .select_genero .options_select {
+.peliculas_select .select_genero .options_select, .series_select .select_genero .options_select {
   font-weight: bold;
 }
 
-.peliculas_catalogo,
-.series_catalogo {
+.peliculas_catalogo, .series_catalogo {
   margin-top: 10%;
   display: grid;
   grid-template-columns: 1fr;
@@ -389,23 +467,19 @@ p {
 }
 
 @media (min-width: 768px) {
-  .peliculas_menu_caja,
-  .series_menu_caja {
+  .peliculas_menu_caja, .series_menu_caja {
     grid-template-columns: 1fr 3fr;
     width: 80%;
     margin: auto;
   }
-  .peliculas_titulo,
-  .series_titulo {
+  .peliculas_titulo, .series_titulo {
     display: block;
     text-align: end;
   }
-  .peliculas_select .select_genero,
-  .series_select .select_genero {
+  .peliculas_select .select_genero, .series_select .select_genero {
     width: 120%;
   }
-  .peliculas_catalogo,
-  .series_catalogo {
+  .peliculas_catalogo, .series_catalogo {
     margin-top: 5%;
     grid-template-columns: 1fr 1fr;
   }
@@ -425,17 +499,14 @@ p {
   }
 }
 @media (min-width: 992px) {
-  .peliculas_menu_caja,
-  .series_menu_caja {
+  .peliculas_menu_caja, .series_menu_caja {
     width: 50%;
     margin: 0;
   }
-  .peliculas_select .select_genero,
-  .series_select .select_genero {
+  .peliculas_select .select_genero, .series_select .select_genero {
     width: 120%;
   }
-  .peliculas_catalogo,
-  .series_catalogo {
+  .peliculas_catalogo, .series_catalogo {
     margin-top: 5%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 2%;
@@ -445,176 +516,88 @@ p {
   }
 }
 @media (min-width: 1200px) {
-  .peliculas_menu_caja,
-  .series_menu_caja {
+  .peliculas_menu_caja, .series_menu_caja {
     width: 40%;
   }
-  .peliculas_select .select_genero,
-  .series_select .select_genero {
+  .peliculas_select .select_genero, .series_select .select_genero {
     width: 130%;
   }
-  .peliculas_catalogo,
-  .series_catalogo {
+  .peliculas_catalogo, .series_catalogo {
     margin-top: 5%;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-
-    /* Tablets (>= 576px) */
-    @media (min-width: 576px) {
-      header .perfil {
-        gap: 20px;
-      }
-      header .perfil .menu {
-        width: 35px;
-      }
-      header .perfil .lupa {
-        font-size: 35px;
-      }
-    }
-    /* Tablets y pantallas medianas (>= 768px) */
-    @media (min-width: 768px) {
-      header .desplegable {
-        margin-left: -230px;
-      }
-      header .titulo {
-        font-size: 35px;
-      }
-      header .perfil .user {
-        width: 60px;
-        height: 60px;
-      }
-      header .perfil .menu {
-        width: 35px;
-      }
-      header .perfil .lupa {
-        font-size: 35px;
-      }
-    }
-    /* Escritorios pequeños (>= 992px) */
-    @media (min-width: 992px) {
-      header .secciones {
-        display: flex;
-        gap: 20px;
-        font-size: 20px;
-        color: #ffffff;
-        margin-top: 20px;
-      }
-      header .desplegable {
-        display: none;
-      }
-      header .perfil {
-        gap: 25px;
-      }
-      header .perfil .user {
-        width: 50px;
-        height: 50px;
-      }
-      header .perfil .menu {
-        width: 33px;
-      }
-      header .perfil .lupa {
-        font-size: 33px;
-      }
-    }
-    /* Escritorios grandes (>= 1200px) */
-    @media (min-width: 1200px) {
-      header .perfil {
-        gap: 25px;
-      }
-      header .perfil .user {
-        width: 50px;
-        height: 50px;
-      }
-      header .secciones {
-        gap: 40px;
-      }
-    }
-    /* Pantallas extra grandes (>= 1400px) */
-    @media (min-width: 1400px) {
-      header .perfil {
-        margin-right: 30px;
-        gap: 25px;
-      }
-      header .perfil .user {
-        width: 50px;
-        height: 50px;
-      }
-      header .secciones {
-        gap: 70px;
-      }
-    }
-    footer {
-      color: #ffffff;
-      text-align: center;
-    }
-    footer .redes {
-      margin: auto;
-      width: 50%;
-      display: flex;
-      justify-content: space-between;
-      font-size: 40px;
-    }
-    footer .enlaces {
-      font-size: 30px;
-      text-align: left;
-    }
-    footer .titulo {
-      font-family: "Poller One", serif;
-      font-size: 40px;
-      color: #e50914;
-      margin-left: 20px;
-    }
-    footer .titulo h3 {
-      text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
-    }
-
-    .copy {
-      color: #ffffff;
-      text-align: center;
-      margin-top: 15px;
-    }
-
-    @media (min-width: 768px) {
-      footer {
-        width: 90%;
-        margin: auto;
-        margin-bottom: 10px;
-      }
-      footer hr {
-        display: none;
-      }
-      footer .enlaces {
-        margin-left: 100px;
-        margin-top: 15px;
-        font-size: 20px;
-        gap: 70px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-      }
-      footer .titulo {
-        margin-top: 20px;
-      }
-    }
-    @media (min-width: 992px) {
-      footer {
-        width: 95%;
-      }
-      footer .enlaces {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        font-size: 15px;
-      }
-      footer .columna p {
-        padding: 10px;
-      }
-      footer .titulo {
-        margin-top: -50px;
-      }
-    }
-    @media (min-width: 1200px) {
-      footer .titulo {
-        margin-top: 1px;
-        font-size: 35px;
-      }
-    }
   }
 }
+footer {
+  color: #ffffff;
+  text-align: center;
+}
+footer .redes {
+  margin: auto;
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 40px;
+}
+footer .enlaces {
+  font-size: 30px;
+  text-align: left;
+}
+footer .titulo {
+  font-family: "Poller One", serif;
+  font-size: 40px;
+  color: #E50914;
+  margin-left: 20px;
+}
+footer .titulo h3 {
+  text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
+}
+
+.copy {
+  color: #ffffff;
+  text-align: center;
+  margin-top: 15px;
+}
+
+@media (min-width: 768px) {
+  footer {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 10px;
+  }
+  footer hr {
+    display: none;
+  }
+  footer .enlaces {
+    margin-left: 100px;
+    margin-top: 15px;
+    font-size: 20px;
+    gap: 70px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  footer .titulo {
+    margin-top: 20px;
+  }
+}
+@media (min-width: 992px) {
+  footer {
+    width: 95%;
+  }
+  footer .enlaces {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    font-size: 15px;
+  }
+  footer .columna p {
+    padding: 10px;
+  }
+  footer .titulo {
+    margin-top: -50px;
+  }
+}
+@media (min-width: 1200px) {
+  footer .titulo {
+    margin-top: 1px;
+    font-size: 35px;
+  }
+}/*# sourceMappingURL=estilos.css.map */
