--- a/FilmCity/estilos/parciales/_header.scss
+++ b/FilmCity/estilos/parciales/_header.scss
@@ -14,6 +14,10 @@ body {
     font-family: $fuente_principal;
 }
 
+.hola{
+    display: block;
+}
+
 header {
     background-color: $color_secundario;
     width: 100%;
