--- a/FilmCity/estilos/parciales/_home.scss
+++ b/FilmCity/estilos/parciales/_home.scss
@@ -75,16 +75,15 @@
     }
   }
 
-//   SLIDES
-.slider-container {
-    
+  .slider-container {
     padding: 20px;
   
     h5 {
       margin-bottom: 20px;
     }
   }
-
+  
+  // Estilos para el slider
   .slider {
     position: relative;
     max-width: 1000px;
@@ -95,7 +94,13 @@
       display: flex;
       transition: transform 0.5s ease-in-out;
     }
-  
+
+    .slide_final{
+        display: flex;
+        transition: transform 0s ease-in-out !important;
+      
+    }
+
     .slide {
       min-width: 100%;
       box-sizing: border-box;
@@ -117,31 +122,37 @@
         color: #ccc;
       }
     }
+
     .slider-btn {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        border: none;
-        padding: 10px;
-        cursor: pointer;
-        font-size: 1.5rem;
-        z-index: 10;
-    
-        &.prev {
-          left: 10px;
-        }
-    
-        &.next {
-          right: 10px;
-        }
-    
-        &:hover {
-          background-color: rgba(0, 0, 0, 0.8);
-        }
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 1.5rem;
+      z-index: 10;
+  
+      &.prev {
+        left: 10px;
       }
-    }  
+  
+      &.next {
+        right: 10px;
+      }
+  
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+      }
+    }
+  }
+
+  
+
+  
+  
   
   // Small devices (landscape phones, 576px and up)
   @media (min-width: 576px) {
