peliculas home terminadas

--- a/FilmCity/estilos/parciales/_header.scss
+++ b/FilmCity/estilos/parciales/_header.scss
@@ -10,8 +10,8 @@ img {
 }
 
 body {
-    background-color: black;
-    font-family: $fuente_principal;
+    background-color: black !important;
+    font-family: $fuente_principal !important;
 }
 
 .hola{
