--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -15,8 +15,8 @@ img {
 }
 
 body {
-  background-color: black;
-  font-family: "Poppins", serif;
+  background-color: black !important;
+  font-family: "Poppins", serif !important;
 }
 
 .hola {
@@ -226,12 +226,13 @@ header .titulo h3 {
   padding: 20px;
 }
 .slider-container h5 {
-  margin-bottom: 20px;
+  color: #ffffff;
+  margin-top: 30px;
 }
 
 .slider {
   position: relative;
-  max-width: 1000px;
+  max-width: 1150px;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -244,22 +245,35 @@ header .titulo h3 {
   transition: transform 0s ease-in-out !important;
 }
 .slider .slide {
+  position: relative;
+  margin-top: -30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 100%;
-  box-sizing: border-box;
   padding: 10px;
-  text-align: center;
+  box-sizing: border-box;
 }
-.slider .slide img {
-  max-width: 100%;
+.slider .slide .ranking-number {
+  font-size: 330px;
+  font-weight: bold;
+  color: #000000;
+  position: relative;
+  z-index: 1;
+  font-family: "Anton";
+  margin-right: 70px;
+  -webkit-text-stroke: 4px #595959;
+}
+.slider .slide .image-container {
+  position: relative;
+  z-index: 2;
+  width: 205px;
+  margin-left: -86px;
+}
+.slider .slide .image-container img {
+  width: 100%;
   border-radius: 10px;
-}
-.slider .slide h2 {
-  font-size: 1.5rem;
-  margin: 10px 0;
-}
-.slider .slide p {
-  font-size: 1rem;
-  color: #ccc;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 .slider .slider-btn {
   position: absolute;
@@ -270,14 +284,14 @@ header .titulo h3 {
   border: none;
   padding: 10px;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 2rem;
   z-index: 10;
 }
 .slider .slider-btn.prev {
-  left: 10px;
+  left: -10px;
 }
 .slider .slider-btn.next {
-  right: 10px;
+  right: -10px;
 }
 .slider .slider-btn:hover {
   background-color: rgba(0, 0, 0, 0.8);
@@ -316,6 +330,17 @@ header .titulo h3 {
     font-size: 1.1rem;
     padding: 10px;
   }
+  .slider .slide {
+    min-width: 33.3333333333%;
+  }
+  .slider .slide .ranking-number {
+    font-size: 200px;
+    margin-right: 60px;
+  }
+  .slider .slide .image-container {
+    width: 130px;
+    margin-left: -70px;
+  }
 }
 @media (min-width: 992px) {
   .carousel-item img {
@@ -334,6 +359,17 @@ header .titulo h3 {
   .carousel-item .carousel-caption .btn-container .btn-plus {
     font-size: 1.2rem;
     padding: 12px;
+  }
+  .slider .slide {
+    min-width: 20%;
+  }
+  .slider .slide .ranking-number {
+    font-size: 150px;
+    margin-right: 0px;
+  }
+  .slider .slide .image-container {
+    width: 100px;
+    margin-left: -10px;
   }
 }
 @media (min-width: 1200px) {
