--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -466,12 +466,20 @@ p {
 
 .enlaces_pelicula {
   padding: 2%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   text-align: center;
+}
+.enlaces_pelicula .peliculas_derecha {
+  text-align: end;
+}
+.enlaces_pelicula .peliculas_izquierda {
+  text-align: start;
 }
 
 .valoracion_tiempo {
   display: grid;
-  grid-template-columns: 1fr 4fr 6fr;
+  grid-template-columns: 3fr 4fr 6fr;
   padding: 1%;
   padding-left: 10%;
 }
@@ -492,6 +500,24 @@ p {
 
 .text-start {
   text-align: start;
+}
+
+.naranja {
+  border-radius: 6px;
+  text-align: center;
+  padding: 1%;
+}
+
+.verde {
+  background-color: green;
+}
+
+.orange {
+  background-color: orangered;
+}
+
+.red {
+  background-color: rgb(135, 22, 22);
 }
 
 @media (min-width: 768px) {
@@ -526,6 +552,15 @@ p {
     z-index: 100;
     width: 105%;
   }
+  .enlaces_pelicula {
+    grid-template-columns: 2fr 1fr;
+  }
+  .enlaces_pelicula .peliculas_derecha {
+    text-align: start;
+  }
+  .enlaces_pelicula .peliculas_izquierda {
+    text-align: end;
+  }
   .valoracion_tiempo {
     padding-left: 3%;
   }
@@ -558,10 +593,16 @@ p {
     width: 120%;
   }
   .enlaces_pelicula {
+    grid-template-columns: 3fr 1fr;
+  }
+  .enlaces_pelicula .peliculas_derecha {
     text-align: start;
   }
+  .enlaces_pelicula .peliculas_izquierda {
+    text-align: end;
+  }
   .valoracion_tiempo {
-    grid-template-columns: 1fr 4fr 6fr;
+    grid-template-columns: 2fr 3fr 1fr;
   }
 }
 @media (min-width: 1200px) {
