--- a/FilmCity/estilos/estilos.scss
+++ b/FilmCity/estilos/estilos.scss
@@ -2,5 +2,6 @@
 @import "./parciales/header";
 @import "./parciales/home";
 @import "./parciales/peliculas";
+@import "./parciales/detallesPeliculas";
 @import "./parciales/series";
 @import "./parciales/footer";
