--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -700,6 +700,116 @@ p {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 }
+.content {
+  position: relative;
+}
+.content .trailerDetalles {
+  position: relative;
+  width: 100%;
+  height: 550px;
+  overflow: hidden;
+}
+.content .trailerDetalles video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  -o-object-fit: cover;
+     object-fit: cover; /* Ajusta el video sin deformación */
+}
+.content .filmcity {
+  position: relative;
+  font-family: "Poller One", serif;
+  font-size: 15px;
+  color: #E50914;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+.content .filmcity h3 {
+  position: absolute;
+  top: 200px;
+  left: 30px;
+  text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
+}
+.content .titulo-pelicula {
+  position: relative;
+}
+.content .titulo-pelicula img {
+  width: 400px;
+  position: absolute;
+  top: 200px;
+  left: 30px;
+}
+.content .descripcion {
+  position: absolute;
+  top: 350px;
+  left: 30px;
+  width: 55%;
+  font-family: "Poppins", serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+}
+.content .masDetalles {
+  position: absolute;
+  top: 450px;
+  display: flex;
+  gap: 20px;
+  margin-left: 30px;
+}
+.content .masDetalles p {
+  font-weight: bold;
+  color: grey;
+}
+.content .masDetalles ul {
+  margin-left: 20px;
+  display: flex;
+  gap: 25px;
+  color: grey;
+}
+.content .verAhora {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 485px;
+  width: 180px;
+  height: 50px;
+  margin-left: 30px;
+  border-radius: 50px;
+  background-color: grey;
+  font-family: "Poppins", serif;
+  font-size: 17px;
+  font-weight: bold;
+  color: white;
+  gap: 5px;
+  box-shadow: 0 5px 5px 0 rgb(39, 39, 39);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  border: none;
+}
+.content .verAhora i {
+  margin-left: 20px;
+  font-size: 40px;
+  color: white;
+}
+.content .botones {
+  position: absolute;
+  top: 485px;
+  margin-left: 250px;
+  display: flex;
+  gap: 10px;
+}
+.content .botones i {
+  font-size: 40px;
+  color: white;
+}
+.content .botones .circulo {
+  border-radius: 100px;
+  border: 3px solid white;
+}
+
 footer {
   color: #ffffff;
   text-align: center;
