--- a/FilmCity/estilos/estilos.scss
+++ b/FilmCity/estilos/estilos.scss
@@ -3,5 +3,6 @@
 @import "./parciales/home";
 @import "./parciales/peliculas";
 @import "./parciales/detallesPeliculas";
+@import "./parciales/detallesSeries";
 @import "./parciales/series";
 @import "./parciales/footer";
