--- a/FilmCity/estilos/estilos.css
+++ b/FilmCity/estilos/estilos.css
@@ -19,10 +19,6 @@ body {
   font-family: "Poppins", serif !important;
 }
 
-.hola {
-  display: block;
-}
-
 header {
   background-color: rgba(75, 68, 68, 0.2980392157);
   width: 100%;
@@ -33,6 +29,9 @@ header {
   align-items: center;
   border-bottom-right-radius: 50px;
   border-bottom-left-radius: 50px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 header .desplegable {
   display: block;
@@ -63,14 +62,25 @@ header .perfil .lupa {
 header .secciones {
   display: none;
 }
+header .secciones a {
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: 250;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+header .secciones a:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
+}
 header .titulo {
   font-family: "Poller One", serif;
-  font-size: 30px;
-  color: #E50914;
   margin-top: 10px;
   margin-left: 20px;
 }
-header .titulo h3 {
+header .titulo a {
+  text-decoration: none;
+  font-size: 30px;
+  color: #E50914;
   text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
 }
 
@@ -110,7 +120,7 @@ header .titulo h3 {
   header .secciones {
     display: flex;
     gap: 20px;
-    font-size: 20px;
+    font-size: 16px;
     color: #ffffff;
     margin-top: 20px;
   }
@@ -125,10 +135,10 @@ header .titulo h3 {
     height: 50px;
   }
   header .perfil .menu {
-    width: 33px;
+    width: 20px;
   }
   header .perfil .lupa {
-    font-size: 33px;
+    font-size: 20px;
   }
 }
 /* Escritorios grandes (>= 1200px) */
@@ -519,7 +529,7 @@ p {
   display: grid;
   grid-template-columns: 1fr;
   text-align: center;
-  position: absolute;
+  position: relative;
   width: 90%;
   margin: auto;
 }
@@ -810,29 +820,93 @@ p {
   border: 3px solid white;
 }
 
+.detalle_pelicula {
+  margin-left: 20px;
+  margin-top: 30px;
+  color: #ffffff;
+  border-bottom: 3px solid #ffffff;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Dos columnas */
+  gap: 20px;
+}
+.detalle_pelicula h3 {
+  border-bottom: 3px solid #ffffff;
+  width: 90px;
+}
+
+.detalle_box {
+  background-color: #2c2c3a;
+  padding: 15px;
+  border-radius: 10px;
+  color: #ffffff;
+  width: 95%;
+}
+
+#sinopsis {
+  grid-column: 1; /* La sinopsis ocupa la primera columna */
+  height: 100%; /* Asegura que la sinopsis ocupe todo el espacio en la primera columna */
+  margin-bottom: 20px;
+}
+
+#reparto, #audio {
+  margin-top: 20px;
+  grid-column: 2; /* El director y el audio están en la segunda columna */
+}
+
+h4 {
+  color: gray;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 14px;
+}
+
+p strong {
+  color: gray;
+  font-weight: 500;
+}
+
 footer {
   color: #ffffff;
   text-align: center;
 }
 footer .redes {
   margin: auto;
+  margin-top: 110px;
   width: 50%;
   display: flex;
   justify-content: space-between;
-  font-size: 40px;
+  font-size: 25px;
 }
 footer .enlaces {
   font-size: 30px;
   text-align: left;
+  font-weight: 200;
+}
+footer .enlaces a {
+  text-decoration: none;
+  display: block;
+  color: #ffffff;
+}
+footer .enlaces a:hover {
+  text-decoration: underline;
 }
 footer .titulo {
   font-family: "Poller One", serif;
-  font-size: 40px;
-  color: #E50914;
   margin-left: 20px;
 }
-footer .titulo h3 {
+footer .titulo a {
+  text-decoration: none;
+  font-size: 30px;
+  color: #E50914;
   text-shadow: 2px 2px 4px #ffffff, -2px -2px 5px rgba(255, 255, 255, 0.5);
+}
+footer .copy p {
+  font-size: 10px;
+  font-weight: 200;
 }
 
 .copy {
@@ -869,9 +943,9 @@ footer .titulo h3 {
   footer .enlaces {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    font-size: 15px;
+    font-size: 13px;
   }
-  footer .columna p {
+  footer .columna a {
     padding: 10px;
   }
   footer .titulo {
