--- a/FilmCity/estilos/parciales/_detallesPeliculas.scss
+++ b/FilmCity/estilos/parciales/_detallesPeliculas.scss
@@ -120,5 +120,58 @@
             border: 3px solid white;
         }
     }
+
     
+    
+}
+
+.detalle_pelicula {
+    margin-left: 20px;
+    margin-top: 30px;
+    color: $color_principal;
+    border-bottom: 3px solid $color_principal;
+    width: fit-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Dos columnas */
+    gap: 20px;
+
+    h3{
+        border-bottom: 3px solid $color_principal;
+        width: 90px;
+    }
+}
+
+.detalle_box {
+    background-color: #2c2c3a;
+    padding: 15px;
+    border-radius: 10px;
+    color: $color_principal;
+    width: 95%;
+}
+
+#sinopsis {
+    grid-column: 1; /* La sinopsis ocupa la primera columna */
+    height: 100%; /* Asegura que la sinopsis ocupe todo el espacio en la primera columna */
+    margin-bottom: 20px;
+}
+
+
+
+#reparto, #audio {
+    margin-top: 20px;
+    grid-column: 2; /* El director y el audio están en la segunda columna */
+}
+
+h4 {
+    color: gray;
+    margin-bottom: 10px;
+}
+
+p {
+    font-size: 14px;
+}
+
+p strong {
+    color: gray;
+    font-weight: 500;
 }
