--- a/FilmCity/estilos/parciales/_peliculas.scss
+++ b/FilmCity/estilos/parciales/_peliculas.scss
@@ -73,7 +73,7 @@ p {
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
-    position: absolute;
+    position: relative;
     width: 90%;
     margin: auto;
 }
